feat: add item color labels and align color name ui
